Release Notes
-------------
2.8.0, Apr 12, 2024
- bug fix: line 1522: too many arguments (regression was introduced in 2.6.0)

2.7.0, Apr 6, 2024
- added support for muCommander 1.3.0+
- changed menu selection items from numbers to letters
- reordered the menu alphabetically

2.6.0, Apr 3, 2024
- added folder to the .tar.bz2 again
- added xed, and pluma for editor selection
- bundled HashGarten 0.16.0

2.5.0, Sep 16, 2023
- added ascon-hash to the customized output menu item
- added integration support for the file manager zzzFM
- added also support for modern releases of Thunar
- fixed all shellcheck warnings
- refactored and beautified the code

2.4.0, Sep 10, 2023
- added support for SpaceFM
- two separate menus for installation and uninstallation

2.3.0, Sep 5, 2023
- added support for the file manager "Files" on elementary OS

2.2.0, Sep 3, 2023
- bundled Jacksum 3.7.0, and HashGarten 0.14.0

2.1.0, Jan 25, 2023
- added java version check
- bundled Jacksum 3.5.0, and HashGarten 0.12.0

2.0.0, Jun 18, 2022
- bundled Jacksum 3.4.0, and HashGarten 0.10.0 for accessing Jacksum's features
  by a GUI
- one launch script for all file browsers

1.4.0, Sep 7, 2020
- added support for KDE framework 5

1.3.0, Mar 12, 2016
- changed sh to bash
- added "Jacksum File Browser Integration" for 
  Xfe (Xfe 1.35+ required), Nemo and Caja
- minor bug fixed: missing optional Thunar xml file could break the installer
  script
- minor bug fixed: Gnome Nautilus changed script file location on Ubuntu 14.04
  and later

1.2.1, Nov 11, 2010
- possible Race Condition for Nautilus during restart of Nautilus (sf# 3099869)
  workaround: injected a sleep instruction
- redirecting both stdout and stderr to /dev/null in order to avoid
  ugly warnings from Nautilus after a restart of Nautilus

1.2.0, Aug 18, 2010
- the script has been made compatible with KDE 4 Konqueror
- using kate rather than kwrite
- the script has been made compatible with ROX-Filer