@@ -2,6 +2,7 @@ Release Notes
 -------------
 2.8.0, Apr 12, 2024
 - bug fix: line 1522: too many arguments (regression was introduced in 2.6.0)
+- disabled shellcheck warnings for $f evaluation because it is a literal used by muCommander
 
 2.7.0, Apr 6, 2024
 - added support for muCommander 1.3.0+
